--- a/sass/state/_mediaquery.scss
+++ b/sass/state/_mediaquery.scss
@@ -38,7 +38,7 @@
 
   .section--page {
     display: block;
-    margin-top: 75px;
+    margin-top: 50px;
     .layout--content {
       margin-bottom: 25px;
     }
@@ -59,18 +59,21 @@
   .footermain__item {
     margin-bottom: 25px;
   }
-  .footer {
-    .mobilephone__desktop {
-      display: none;
-    }
+
+  .footer--main {
     .mobilephone__mobile {
       display: block;
     }
+    .mobilephone__desktop {
+      display: none;
+    }
+  }
+
+  .btnmobile__btn {
+    margin-top: 20px;
+    padding: 8px;
+    font-size: 1.2em;
   }
 }
 
-.btnmobile__btn {
-  margin-top: 20px;
-  padding: 8px;
-  font-size: 1.2em;
-}
+
