--- a/css/style.css
+++ b/css/style.css
@@ -2679,7 +2679,10 @@ p {
   overflow: hidden;
   background-color: #000000;
   position: relative;
-  z-index: 2; }
+  z-index: 2;
+  overflow-x: hidden;
+  overflow-y: auto;
+  perspective: 1px; }
   .section--homepage .sectionhomepage__bcg {
     background: url("../images/runderen.jpg") no-repeat;
     position: absolute;
@@ -2687,10 +2690,19 @@ p {
     background-size: cover;
     z-index: 1;
     width: 100vw;
-    opacity: 0.9; }
+    opacity: 0.9;
+    transform: translateZ(-1px); }
+
+.parallax__layer {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0; }
 
 .homepage--container {
-  z-index: 2; }
+  z-index: 2;
+  transform: translateZ(0); }
   .homepage--container .homepage__logo--slogan .sectionhomepage__title__cta {
     padding-top: 50px; }
 
