--- a/sass/layout/_sections.scss
+++ b/sass/layout/_sections.scss
@@ -12,6 +12,9 @@
   background-color: #000000;
   position: relative;
   z-index: 2;
+  overflow-x: hidden;
+  overflow-y: auto;
+  perspective: 1px;
   .sectionhomepage__bcg {
     background: url("../images/runderen.jpg") no-repeat;
     position: absolute;
@@ -20,11 +23,20 @@
     z-index: 1;
     width: 100vw;
     opacity: 0.9;
+    transform: translateZ(-1px);
   }
 }
 
+.parallax__layer {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
 .homepage--container {
   z-index: 2;
+  transform: translateZ(0);
   .homepage__logo--slogan {
     .sectionhomepage__title__cta {
       padding-top: 50px;
