--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -14,6 +14,7 @@
   font-family: "Fjalla One", sans-serif;
   font-size: 2em;
   text-align: center;
+  transition: all 0.4s ease-in-out;
   &:hover {
     color: #000000;
     background-color: #ffffff;
