--- a/sass/style.scss
+++ b/sass/style.scss
@@ -27,7 +27,8 @@
 //=========================
 @import "layout/sections";
 @import "layout/footer";
-
+@import "layout/sidebars";
+@import "layout/page--bestellen";
 
 //========================
 // @@ ++ Components
