--- a/sass/style.scss
+++ b/sass/style.scss
@@ -38,6 +38,7 @@
 @import "components/webforms/forms-global";
 @import "components/webforms/contact-form";
 @import "components/webforms/kalfsvlees";
+@import "components/node/node-werkwijze";
 
 //=======================
 // @@ ++ State
