--- a/sass/layout/_sections.scss
+++ b/sass/layout/_sections.scss
@@ -112,12 +112,9 @@
 }
 
 .section--page {
-  background: $grey;
-  display: flex;
-  margin-top: 50px;
+  //background: $grey;
+  margin-top: 70px;
   min-height: 93vh;
-  align-items: center;
-  justify-content: center;
   .sectionpage__container {
     background: $darkgrey;
     overflow: auto;
