--- a/sass/style.scss
+++ b/sass/style.scss
@@ -29,6 +29,7 @@
 @import "layout/footer";
 @import "layout/sidebars";
 @import "layout/page--bestellen";
+@import "layout/page--header";
 
 //========================
 // @@ ++ Components
