--- a/sass/style.scss
+++ b/sass/style.scss
@@ -25,11 +25,13 @@
 //=========================
 // @@ ++ Layout
 //=========================
+@import "layout/maintenance";
 @import "layout/sections";
 @import "layout/footer";
 @import "layout/sidebars";
 @import "layout/page--bestellen";
 @import "layout/page--header";
+
 
 //========================
 // @@ ++ Components
