--- a/sass/layout/_maintenance.scss
+++ b/sass/layout/_maintenance.scss
@@ -1,3 +1,45 @@
 //================================
 // @@ ++ Maintenance
 //================================
+
+.maintenance-page {
+  background: url("../images/runderen.jpg") no-repeat;
+  position: absolute;
+  height: 100%;
+  background-size: cover;
+  z-index: 1;
+  width: 100vw;
+  #header {
+    margin-top: 50px;
+    #logo {
+      float: left;
+    }
+    #site-name {
+      color: #000000;
+      span {
+        padding-left: 35px;
+      }
+      a {
+        &:hover {
+          text-decoration: none;
+        }
+      }
+    }
+    h2 {
+      margin-top: 25px;
+      span {
+        padding-left: 35px;
+      }
+    }
+  }
+  #content {
+    padding: 35px;
+    margin-top: 35px;
+    color: #000;
+    background: #ffffff;
+    h1 {
+      color: #000000;
+      margin-bottom: 15px;
+    }
+  }
+}
