--- a/sass/components/node/_node-werkwijze.scss
+++ b/sass/components/node/_node-werkwijze.scss
@@ -1,16 +1,22 @@
 //================================
-// @@ ++ Werkwijze
+// @@ ++ Werkwijze inhoudstype
+// Op de pagina bestellen
 //================================
 // De volledige node
+// gebruikt op
+// page bestellen = inhoudstype werkwijze
+
 .werkwijze--node__wrap {
   margin-top: 35px;
   h3 {
     margin-bottom: 10px;
   }
+
 }
 
 
-// De teaser
+// De teaser deze wordt in de zijbalk gebruikt op
+// page bestellen = inhoudstype werkwijze
 
 .werkwijze--teaser__wrap {
   background: $pink;
