--- a/sass/components/webforms/_contact-form.scss
+++ b/sass/components/webforms/_contact-form.scss
@@ -29,6 +29,16 @@
     }
   }
 }
+.webform-client-form-8 {
+  input[type=text] {
+    width: 100%;
+    padding: 5px;
+    border: none;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+}
+
 
 @media only screen and (max-width: 479px) {
 /* css code voor smartphones in portrait mode */
