--- a/sass/layout/_sections.scss
+++ b/sass/layout/_sections.scss
@@ -26,7 +26,6 @@
 .homepage--container {
   z-index: 2;
   .homepage__logo--slogan {
-
     .btn--cta {
       .btncta__btn {
         margin-top: 15px;
@@ -117,7 +116,7 @@
 .section--page {
   //background: $grey;
   margin-top: 70px;
-  min-height: 93vh;
+  //min-height: 93vh;
   .sectionpage__container {
     background: $darkgrey;
     overflow: auto;
