--- a/sass/style.scss
+++ b/sass/style.scss
@@ -48,6 +48,7 @@
 
 @import "components/uc/cart";
 @import "components/uc/producten-table";
+@import "components/uc/checkout";
 
 //=======================
 // @@ ++ State
