--- a/sass/layout/_sections.scss
+++ b/sass/layout/_sections.scss
@@ -112,7 +112,7 @@
 .section--page {
   .sectionpage__container__wrap {
     background: $darkgrey;
-    margin-top: 70px;
+    margin: 70px 0;
     .sectionpage__container {
       padding-top: 30px;
       padding-bottom: 30px;
